--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,12 +12,12 @@
     </parent>
 
     <groupId>ru.k4nk</groupId>
-    <artifactId>worktracker-backend</artifactId>
+    <artifactId>chronofocus-backend</artifactId>
     <version>0.1.2</version>
     <packaging>jar</packaging>
 
-    <name>worktracker-backend</name>
-    <description>worktracker-backend</description>
+    <name>chronofocus-backend</name>
+    <description>chronofocus-backend</description>
 
     <properties>
         <java.version>21</java.version>
@@ -60,6 +60,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+
+        <!-- OpenAPI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.openapitools/openapi-generator -->
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator</artifactId>
+            <version>7.11.0</version>
         </dependency>
 
         <!-- JPA -->
